--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": "src/",
     "paths": {
-      "base-components": [ "./base-components/*" ]
+      "base-components": [ "./base-components/*" ],
+      "app": [ "./app/*" ]
     }
   }
 }
