--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.2.2",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
@@ -19,6 +20,7 @@
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5",
+    "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
