--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": "src/",
     "paths": {
-      "Context": [ "./Context/*" ],
+      "context": [ "./context/*" ],
       "reducer": [ "./reducer/*" ]
     }
   }
