--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.9.1",
     "bootstrap": "^4.5.3",
+    "firebase": "^8.1.2",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
