--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.9.1",
+    "antd-icons": "0.1.0-alpha.1",
     "bootstrap": "^4.5.3",
+    "firebase": "^8.1.2",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-dnd": "^11.1.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-shadow-scroll": "^2.1.0",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
