--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dnd": "^11.1.3",
     "react-dom": "^17.0.1",
