--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dnd": "^11.1.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-shadow-scroll": "^2.1.0",
     "uuid": "^8.3.1",
