create layouts for login, register, resetPasswords forms, implement resetPassword simple validation

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
     "baseUrl": "src/",
     "paths": {
       "constants/*": [ "./constants/*" ],
-      "context": [ "./context/*" ]
+      "context": [ "./context/*" ],
+      "service": [ "./service/*" ]
     }
   },
   "include": ["src"],
