--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,9 +2,8 @@
   "compilerOptions": {
     "baseUrl": "src/",
     "paths": {
-      "constants/*": [ "./constants/*" ],
-      "context": [ "./context/*" ],
-      "service": [ "./service/*" ]
+      "service": [ "./service/*" ],
+      "hooks": [ "./hooks/*" ]
     }
   },
   "include": ["src"],
