--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.9.1",
     "firebase": "^8.1.2",
+    "immer": "^8.0.0",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "simplebar-react": "^2.3.0",
+    "use-immer": "^0.4.2",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
