on login adds data to userContext with loading while fetching

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,7 @@
       "service": [ "./service/*" ],
       "hooks": [ "./hooks/*" ],
       "app": ["./app/*"]
+      "components": ["./components/*"]
     }
   },
   "exclude": ["node_modules", "dist"]
