--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "antd-icons": "0.1.0-alpha.1",
     "bootstrap": "^4.5.3",
     "firebase": "^8.1.2",
+    "firebase-admin": "^9.4.2",
+    "firebaseui": "^4.7.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
