--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": "src/",
     "paths": {
-      "context": [ "./context/*" ]
+      "context": [ "./context/*" ],
+      "config": ["./config/*"]
     }
   }
 }
