--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.9.1",
     "bootstrap": "^4.5.3",
+    "firebase": "^8.1.2",
+    "firebaseui": "^4.7.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
@@ -51,6 +54,7 @@
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "node-sass-install": "^1.0.2",
     "prettier": "^2.1.2"
   }
 }
