--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.9.1",
+    "antd-img-crop": "^3.13.2",
     "firebase": "^8.1.2",
     "immer": "^8.0.0",
     "lodash": "^4.17.20",
